[tool.poetry]
name = "pyspark_bdd"
version = "0.1.0"
description = "BDD examples for PySpark using pytest-bdd"
authors = ["Vicky Avison <vicky.avison@plexure.com>"]

[tool.poetry.dependencies]
python = "^3.10"
pyspark = "^3.2.1"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
pytest-bdd = "^5.0.0"
pandas = "^1.4.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
