[tool.poetry]
name = "pyspark_bdd"
version = "0.1.0"
description = "BDD examples for PySpark using pytest-bdd"
authors = ["Vicky Avison <vicky.avison@plexure.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pyspark = "^3.3.0"

[tool.poetry.dev-dependencies]
pytest = "^7.2.0"
pytest-bdd = "^6.1.0"
pandas = "^1.5.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
